# sdl3-imgui-template

./: .gitignore  CMakeLists.txt  build.sh
include/ui/: button.h  cube.h  cube_shaders.h  scene.h  titlebar.h
include/utils/: frame_buffer.h  rectangle.h  rectangle_shaders.h  text_renderer.h  texture.h
includes/ui/: button.h  logger.h  terminal.h  titlebar.h
includes/utils/: common.h  request.h  serial_port.h
src/: button.cpp  button.h  common.cpp  common.h  logger.cpp  logger.h  main.cpp  shell.cpp  shell.h  terminal.cpp  terminal.h  titlebar.cpp  titlebar.h
src/ui/: button.cpp  button.h  cube.cpp  cube.h  logger.cpp  logger.h  scene.cpp  scene.h  terminal.cpp  terminal.h  titlebar.cpp  titlebar.h
src/utils/: common.cpp  common.h  frame_buffer.cpp  rectangle.cpp  rectangle.h  request.cpp  serial_port.cpp  shader.cpp  shader.h  shell.cpp  shell.h  text_renderer.cpp  text_renderer.h  text_renderer_shaders.h  texture.cpp  texture.h  texture_shaders.h
